<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- application name -->
    <string name="app_name">RMD Calculator</string>
<!-- request birth date -->
	<string name="request">Enter Birthdate</string>
<!-- text for calculate button -->
	<string name="calculate">Calculate RMD</string>
<!-- text for result label -->
	<string name="rl">RMD:</string>
<!-- text asking for balance -->
	<string name="balance">Enter Account balance</string>
<!-- text to specify where years can be chosen -->
	<string name="y">Year:</string>
<!-- text for Combobox selection pop up -->
	<string name="choices">Select Year of Distribution</string>
<!-- set title for EULA Dialog -->
	<string name="about_title">MIT License</string>
<!-- text for agree button -->
	<string name="about_agree_button">Agree</string>
<!-- text for disagree button -->
	<string name="about_da_button">Disagree</string>
<!-- title for error dialog -->
	<string name="error_title">Error!</string>
<!-- error text -->
	<string name="error">Value(s) cannot be parsed!</string>
<!-- titles for SQLite statuses -->
    <string name="save_failure">Save Failed</string>
    <string name="save_success">Save Successful</string>
    <string name="load_failure">Load Failed</string>
    <string name="load_success">Load Successful</string>
    <string name="update_failure">Update Failed</string>
    <string name="update_success">Update Successful</string>
<!-- messages for SQLite statuses -->
    <string name="save_failure_text">Data could not be saved.</string>
    <string name="save_success_text">Data saved successfully.</string>
    <string name="load_failure_text">Could not load data.</string>
    <string name="load_success_text">All data loaded successfully.</string>
    <string name="update_failure_text">Could not update record.</string>
    <string name="update_success_text">Record updated successfully.</string>
<!-- text for okay button -->
	<string name="ok">OK</string>
<!--  text for XML functionality -->
	<string name="xml_error_title">XML Export Failed</string>
	<string name="xml_error">Data could not be saved to XML</string>
	<string name="xml_load_error_title">XML Import Failed</string>
	<string name="xml_load_error">Data could not be imported because file cannot be read.</string>
	<string name="xml_success_title">XML Export Successful</string>
	<string name="xml_message">Data saved to XML successfully</string>
	<string name="xml_load_success_title">XML Import Successful</string>
	<string name="xml_load_success">Data imported successfully from XML.</string>
<!-- messages to display if file does not exist -->
	<string name="file_error_title">File Cannot be Found</string>
	<string name="file_error">File does not exist.</string>
<!-- text for fields -->
    <string name="month">Birth Month</string>
    <string name="day">Birth Day</string>
    <string name="year">Birth Year</string>
</resources>
